Mark img as decorative

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <main>
             <section id="about">
                 <h2>Hello World</h2>
-                <img src="./assets/images/profile.jpg" alt="Stock footage showing a sunset with a tent in the front. A guy is starring at the sunset">
+                <img src="./assets/images/profile.jpg" alt="">
                 <p>This is my Hero img</p>
                 <div class="tag-container">
                     <h3>Skills</h3>
-                    <ul> <!-- insert optional add a tags-->
+                    <ul> <!-- insert optional a tags-->
                         <li>React</li>
                         <li>Gatsby</li>
                         <li>JS</li>
@@ -66,15 +66,15 @@
 
                 <div class="socials-container">
                     <div class="social-container">
-                        <img src="./assets/images/git.png" alt="Github Icon">
+                        <img src="./assets/images/git.png" alt=""">
                         <a href="https://github.com/Tim-Pet" target="_blank"><p>GitHub</p></a>
                     </div>
                     <div class="social-container">
-                        <img src="./assets/images/codepen.png" alt="Codepen Icon">
+                        <img src="./assets/images/codepen.png" alt="">
                         <a href="https://codepen.io/TimPet" target="_blank"><p>Codepen</p></a>
                     </div>
                     <div class="social-container">
-                        <img src="./assets/images/linkedin.png" alt="LinkedIn Icon">
+                        <img src="./assets/images/linkedin.png" alt="">
                         <a href="https://www.linkedin.com/in/tim-petersen-6022121a3" target="_blank"><p>LinkedIn</p></a>
                     </div>
                 </div>
