--- a/index.html
+++ b/index.html
@@ -94,14 +94,8 @@
             <h2>Biography</h2>
             <div class="bio">
                 <h3>About me</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure
-                    perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius
-                    accusamus voluptate sint fugit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
-                    aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea
-                    sapiente a, blanditiis, autem eius accusamus voluptate sint fugit!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure
-                    perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius
-                    accusamus voluptate sint fugit!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius accusamus voluptate sint fugit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius accusamus voluptate sint fugit!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius accusamus voluptate sint fugit!</p>
                 <p>Stay tuned!</p>
             </div>
             <div class="cv">
