--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tims Petersen</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -69,20 +70,21 @@
 
             <div class="socials-container">
                 <div class="social-container">
-                    <img src="./assets/images/git.png" alt=""">
-                        <a href=" https://github.com/Tim-Pet" target="_blank">
-                    <p>GitHub</p></a>
+                    <img src="./assets/images/git.png" alt="">
+                    <a href=" https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
+                        GitHub
+                    </a>
                 </div>
                 <div class="social-container">
                     <img src="./assets/images/codepen.png" alt="">
-                    <a href="https://codepen.io/TimPet" target="_blank">
-                        <p>Codepen</p>
+                    <a href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
+                        Codepen
                     </a>
                 </div>
                 <div class="social-container">
                     <img src="./assets/images/linkedin.png" alt="">
-                    <a href="https://www.linkedin.com/in/tim-petersen-6022121a3" target="_blank">
-                        <p>LinkedIn</p>
+                    <a href="https://www.linkedin.com/in/tim-petersen-6022121a3" target="_blank" rel="noopener noreferrer">
+                        LinkedIn
                     </a>
                 </div>
             </div>
@@ -106,31 +108,32 @@
                         <th>Year</th>
                         <th>Job</th>
                     </tr>
-                    <tr>
-                        <td>2021 - today</td>
-                        <td><strong>Web Developer</strong>, Vertigo Studios GmbH & Co. KG, Freelancer</td>
-                    </tr>
-                    <tr>
-                        <td>2021 - today</td>
-                        <td><strong>Web Developer</strong>, Edyoucated, Working Student</td>
-                    </tr>
-                    <tr>
-                        <td>2020 - today</td>
-                        <td><strong>Web Designer</strong>, Freelancer</td>
-                    </tr>
-                    <tr>
-                        <td>2019 - 2021</td>
-                        <td><strong>Business Management</strong>, Sustragil, Working Student</td>
-                    </tr>
-                    <tr>
-                        <td>2019 - 2019</td>
-                        <td><strong>Facility Manager</strong>, BASF Coatings GmbH, Intern</td>
-                    </tr>
-                    <tr>
-                        <td>2018 - 2018</td>
-                        <td><strong>Call Center Agent Inbound</strong>, S Direkt Marketing GmbH & Co. KG, Working
-                            Student</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>2021 - today</td>
+                            <td><strong>Web Developer</strong>, Vertigo Studios GmbH & Co. KG, Freelancer</td>
+                        </tr>
+                        <tr>
+                            <td>2021 - today</td>
+                            <td><strong>Web Developer</strong>, Edyoucated, Working Student</td>
+                        </tr>
+                        <tr>
+                            <td>2020 - today</td>
+                            <td><strong>Web Designer</strong>, Freelancer</td>
+                        </tr>
+                        <tr>
+                            <td>2019 - 2021</td>
+                            <td><strong>Business Management</strong>, Sustragil, Working Student</td>
+                        </tr>
+                        <tr>
+                            <td>2019 - 2019</td>
+                            <td><strong>Facility Manager</strong>, BASF Coatings GmbH, Intern</td>
+                        </tr>
+                        <tr>
+                            <td>2018 - 2018</td>
+                            <td><strong>Call Center Agent Inbound</strong>, S Direkt Marketing GmbH & Co. KG, Working Student</td>
+                        </tr>
+                    </tbody>
                 </table>
                 <h4>Edyoucation</h4>
                 <table>
@@ -138,26 +141,28 @@
                         <th>Year</th>
                         <th>Certification</th>
                     </tr>
-                    <tr>
-                        <td>2021-today</td>
-                        <td>Certificate xy, Web Development Fullstack</td>
-                    </tr>
-                    <tr>
-                        <td>2020-2021</td>
-                        <td>Digital Shaper Certificate, Web Development Front End</td>
-                    </tr>
-                    <tr>
-                        <td>2019-2021</td>
-                        <td>Bachelor of Science: Business informatics</td>
-                    </tr>
-                    <tr>
-                        <td>2016-2019</td>
-                        <td>Bachelor of Science: Real Estate & Facility Management</td>
-                    </tr>
-                    <tr>
-                        <td>2016</td>
-                        <td>Abitur</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>2021-today</td>
+                            <td>Certificate xy, Web Development Fullstack</td>
+                        </tr>
+                        <tr>
+                            <td>2020-2021</td>
+                            <td>Digital Shaper Certificate, Web Development Front End</td>
+                        </tr>
+                        <tr>
+                            <td>2019-2021</td>
+                            <td>Bachelor of Science: Business informatics</td>
+                        </tr>
+                        <tr>
+                            <td>2016-2019</td>
+                            <td>Bachelor of Science: Real Estate & Facility Management</td>
+                        </tr>
+                        <tr>
+                            <td>2016</td>
+                            <td>Abitur</td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </section>
