--- a/index.html
+++ b/index.html
@@ -11,170 +11,74 @@
 
 <body>
     <header>
-        <h1>Tim Petersen</h1>
+        <h1><a href="#me">TP</a></h1>
         <nav>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-            <a href="#biography">Biography</a>
+            <a href="#skills">Skills</a>
+            <a href="#bio">Bio</a>
+            <a href="#socials">Socials</a>
         </nav>
     </header>
 
-    <br /> <!-- temporary -->
+    <section id="me">
+        <img src="assets/images/profile.jpg" alt="">
+        <h2>#Me</h2>
+        <div>
+            <p>👋🏽 Hi, I am Tim</p>
+            <p>💻 Web Developer</p>
+            <p>⚓️ Hamburg</p>
+        </div>
+    </section>
 
-    <main>
-        <section id="about">
-            <h2>Hello World</h2>
-            <img src="./assets/images/profile.jpg" alt="">
-            <p>This is my Hero img</p>
-            <div class="tag-container">
-                <h3>Skills</h3>
-                <ul>
-                    <!-- insert optional a tags-->
-                    <li>React</li>
-                    <li>Gatsby</li>
-                    <li>JS</li>
-                    <li>SCSS</li>
-                    <li>HTML</li>
-                    <li>Java</li>
-                    <li>Wordpress</li>
-                    <li>Webflow</li>
-                    <li>Figma</li>
-                </ul>
+    <section id="skills">
+        <h2>#Skills</h2>
+        <div>
+            <a href="">React.js</a>
+            <a href="">Gatsby.js</a>
+            <a href="">Js</a>
+            <a href="">Scss</a>
+            <a href="">Html</a>
+            <a href="">Java</a>
+            <a href="">Wordpress</a>
+            <a href="">Webflow</a>
+            <a href="">Figma</a>
+        </div>
+    </section>
+
+    <section id="bio">
+        <h2>#Bio</h2>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+    </section>
+
+    <section id="socials">
+        <h2>#Socials</h2>
+        <div>
+            <a href="">
+                <div>O</div>
+                <span>github</span>
+            </a>
+            <a href="">
+                <div>O</div>
+                <span>codepen</span>
+            </a>
+            <a href="">
+                <div>O</div>
+                <span>linkedin</span>
+            </a>
+        </div>
+    
+        <div>
+            <h3>Contact me:</h3>
+            <div>
+                <img src="" alt="">
+                <a href="tel:+4915789123500">0157/89123500</a>
             </div>
-            <div class="tag-container">
-                <h3>Interests</h3>
-                <ul>
-                    <li>Guitar</li>
-                    <li>Piano</li>
-                    <li>Volleyball</li>
-                    <li>Ultimate</li>
-                    <li>Football</li>
-                </ul>
+            <div>
+                <img src="" alt="">
+                <a href="mailto:tim.petersen1@outlook.de">tim.petersen1@outlook.de</a>
             </div>
-        </section>
-
-        <br /> <!-- temporary -->
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <div class="contact-container">
-                <div class="contact-entry">
-                    <h3>Num</h3>
-                    <a href="tel:+4915789123500">+49157/89123500</a>
-                </div>
-                <div class="contact-entry">
-                    <h3>Mail</h3>
-                    <a href="malito:tim.petersen1@outlook.de">tim.petersen1@outlook.de</a>
-                </div>
-            </div>
-
-            <div class="socials-container">
-                <div class="social-container">
-                    <img src="./assets/images/git.png" alt="">
-                    <a href=" https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
-                        GitHub
-                    </a>
-                </div>
-                <div class="social-container">
-                    <img src="./assets/images/codepen.png" alt="">
-                    <a href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
-                        Codepen
-                    </a>
-                </div>
-                <div class="social-container">
-                    <img src="./assets/images/linkedin.png" alt="">
-                    <a href="https://www.linkedin.com/in/tim-petersen-6022121a3" target="_blank" rel="noopener noreferrer">
-                        LinkedIn
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <br /> <!-- temporary -->
-
-        <section id="biography">
-            <h2>Biography</h2>
-            <div class="bio">
-                <h3>About me</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius accusamus voluptate sint fugit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius accusamus voluptate sint fugit!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui aspernatur, tenetur distinctio iure perferendis ipsa. Quo, accusantium tempore incidunt ex ea sapiente a, blanditiis, autem eius accusamus voluptate sint fugit!</p>
-                <p>Stay tuned!</p>
-            </div>
-            <div class="cv">
-                <h3>CV</h3>
-                <h4>Job experience</h4>
-                <table>
-                    <tr>
-                        <th>Year</th>
-                        <th>Job</th>
-                    </tr>
-                    <tbody>
-                        <tr>
-                            <td>2021 - today</td>
-                            <td><strong>Web Developer</strong>, Vertigo Studios GmbH & Co. KG, Freelancer</td>
-                        </tr>
-                        <tr>
-                            <td>2021 - today</td>
-                            <td><strong>Web Developer</strong>, Edyoucated, Working Student</td>
-                        </tr>
-                        <tr>
-                            <td>2020 - today</td>
-                            <td><strong>Web Designer</strong>, Freelancer</td>
-                        </tr>
-                        <tr>
-                            <td>2019 - 2021</td>
-                            <td><strong>Business Management</strong>, Sustragil, Working Student</td>
-                        </tr>
-                        <tr>
-                            <td>2019 - 2019</td>
-                            <td><strong>Facility Manager</strong>, BASF Coatings GmbH, Intern</td>
-                        </tr>
-                        <tr>
-                            <td>2018 - 2018</td>
-                            <td><strong>Call Center Agent Inbound</strong>, S Direkt Marketing GmbH & Co. KG, Working Student</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h4>Edyoucation</h4>
-                <table>
-                    <tr>
-                        <th>Year</th>
-                        <th>Certification</th>
-                    </tr>
-                    <tbody>
-                        <tr>
-                            <td>2021-today</td>
-                            <td>Certificate xy, Web Development Fullstack</td>
-                        </tr>
-                        <tr>
-                            <td>2020-2021</td>
-                            <td>Digital Shaper Certificate, Web Development Front End</td>
-                        </tr>
-                        <tr>
-                            <td>2019-2021</td>
-                            <td>Bachelor of Science: Business informatics</td>
-                        </tr>
-                        <tr>
-                            <td>2016-2019</td>
-                            <td>Bachelor of Science: Real Estate & Facility Management</td>
-                        </tr>
-                        <tr>
-                            <td>2016</td>
-                            <td>Abitur</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-
-    </main>
-    <footer>
-        <h2>Temporary footer header</h2>
-        <ul>
-            <li>Testitem 1</li>
-            <li>Testitem 2</li>
-        </ul>
-    </footer>
+        </div>
+    </section>
 </body>
-
-</html>
