Style Header & Me section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="section">
         <h1><a href="#me">TP</a></h1>
         <nav>
             <a href="#skills">Skills</a>
@@ -19,17 +19,17 @@
         </nav>
     </header>
 
-    <section id="me">
-        <img src="assets/images/profile.jpg" alt="">
-        <h2>#Me</h2>
+    <section class="section section-me" id="me">
+        <img class="image-fluid" src="assets/images/profile.jpg" alt="">
         <div>
+            <h2>#Me</h2>
             <p>👋🏽 Hi, I am Tim</p>
             <p>💻 Web Developer</p>
             <p>⚓️ Hamburg</p>
         </div>
     </section>
 
-    <section id="skills">
+    <section class="section" id="skills">
         <h2>#Skills</h2>
         <div>
             <a href="">React.js</a>
@@ -44,7 +44,7 @@
         </div>
     </section>
 
-    <section id="bio">
+    <section class="section" id="bio">
         <h2>#Bio</h2>
         <div>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <section id="socials">
+    <section class="section" id="socials">
         <h2>#Socials</h2>
         <div>
             <a href="">
