Add basic skills styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="section">
+    <header class="container">
         <h1><a href="#me">TP</a></h1>
         <nav>
             <a href="#skills">Skills</a>
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <section class="section section-me" id="me">
+    <section class="container section-me" id="me">
         <img class="image-fluid" src="assets/images/profile.jpg" alt="">
         <div>
             <h2>#Me</h2>
@@ -29,22 +29,22 @@
         </div>
     </section>
 
-    <section class="section" id="skills">
+    <section class="container" id="skills">
         <h2>#Skills</h2>
-        <div>
-            <a href="">React.js</a>
-            <a href="">Gatsby.js</a>
-            <a href="">Js</a>
-            <a href="">Scss</a>
-            <a href="">Html</a>
-            <a href="">Java</a>
-            <a href="">Wordpress</a>
-            <a href="">Webflow</a>
-            <a href="">Figma</a>
+        <div class="skills-container">
+            <a href="" class="skills skills-first-layer">React.js</a>
+            <a href="" class="skills skills-first-layer">Gatsby.js</a>
+            <a href="" class="skills skills-first-layer">Js</a>
+            <a href="" class="skills skills-first-layer">Scss</a>
+            <a href="" class="skills skills-second-layer">Html</a>
+            <a href="" class="skills skills-second-layer">Java</a>
+            <a href="" class="skills skills-second-layer">Wordpress</a>
+            <a href="" class="skills skills-third-layer">Webflow</a>
+            <a href="" class="skills skills-third-layer">Figma</a>
         </div>
     </section>
 
-    <section class="section" id="bio">
+    <section class="container" id="bio">
         <h2>#Bio</h2>
         <div>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <section class="section" id="socials">
+    <section class="container" id="socials">
         <h2>#Socials</h2>
         <div>
             <a href="">
