--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </nav>
     </header>
 
-    <section class="container section-me" id="me">
+    <section class="container me-section" id="me">
         <picture >
             <source media="(max-width:599px)" srcset="assets/images/profile-mobile.jpg">
             <source media="(min-width:600px)" srcset="assets/images/profile-desktop.jpg">
-            <img class="image-fluid" src="assets/images/profile-mobile.jpg" alt="Flowers">
+            <img class="image-fluid" src="assets/images/profile-desktop.jpg"alt="" width="1200" height="1798">
         </picture>
         <div>
             <h2>#Me</h2>
@@ -36,24 +36,30 @@
     <section class="container" id="skills">
         <h2>#Skills</h2>
         <div class="skills-container">
-            <a href="" class="skills skills-first-layer">React.js</a>
-            <a href="" class="skills skills-first-layer">Gatsby.js</a>
-            <a href="" class="skills skills-first-layer">Js</a>
-            <a href="" class="skills skills-first-layer">Scss</a>
-            <a href="" class="skills skills-second-layer">Html</a>
-            <a href="" class="skills skills-second-layer">Java</a>
-            <a href="" class="skills skills-second-layer">Wordpress</a>
-            <a href="" class="skills skills-third-layer">Webflow</a>
-            <a href="" class="skills skills-third-layer">Figma</a>
+            <div class="first-layer layer-container">
+                <a href="" class="skills skills-first-layer">React.js</a>
+                <a href="" class="skills skills-first-layer">Gatsby.js</a>
+                <a href="" class="skills skills-first-layer">Js</a>
+                <a href="" class="skills skills-first-layer">Scss</a>
+            </div>
+            <div class="second-layer layer-container">
+                <a href="" class="skills skills-second-layer">Html</a>
+                <a href="" class="skills skills-second-layer">Java</a>
+                <a href="" class="skills skills-second-layer">Figma</a>
+            </div>
+            <div class="third-layer layer-container">
+                <a href="" class="skills skills-third-layer">Wordpress</a>
+                <a href="" class="skills skills-third-layer">Webflow</a>
+            </div>
         </div>
     </section>
 
-    <section class="container" id="bio">
+    <section class="container bio-section" id="bio">
         <h2>#Bio</h2>
-        <div>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-        </div>
+        <p>Hi, I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="">BPC</a>.</p>
+        <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster, germany I started over to help pushing the digitalisation and minimize barriers for small & large companies alike. In order to achieve that goal I studied business informatic in a university in Münster, germany for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="">Techlabs</a> & <a href="">Neue Fische</a>.
+        </p>
+        <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="">@Github</a> a look.</p>
     </section>
 
     <section class="container" id="socials">
