--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP | personal-website</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link href='https://css.gg/phone.css' rel='stylesheet'>
+    <link href='https://css.gg/mail-open.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -64,29 +66,29 @@
 
     <section class="container" id="socials">
         <h2>#Socials</h2>
-        <div>
+        <div class="socials-container">
             <a href="">
-                <div>O</div>
+                <div class="logo git-logo"></div>
                 <span>github</span>
             </a>
             <a href="">
-                <div>O</div>
+                <div class="logo codepen-logo"></div>
                 <span>codepen</span>
             </a>
             <a href="">
-                <div>O</div>
+                <div class="logo linkedin-logo"></div>
                 <span>linkedin</span>
             </a>
         </div>
     
-        <div>
+        <div class="contact-container">
             <h3>Contact me:</h3>
-            <div>
-                <img src="" alt="">
+            <div class="contact-entry">
+                <i class="gg-phone"></i>
                 <a href="tel:+4915789123500">0157/89123500</a>
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="contact-entry">
+                <i class="gg-mail-open"></i>
                 <a href="mailto:tim.petersen1@outlook.de">tim.petersen1@outlook.de</a>
             </div>
         </div>
