--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         <h2>#Skills</h2>
         <div class="skills-container">
             <div class="first-layer layer-container">
-                <a href="" class="skills skills-first-layer">React.js</a>
-                <a href="" class="skills skills-first-layer">Gatsby.js</a>
-                <a href="" class="skills skills-first-layer">Js</a>
-                <a href="" class="skills skills-first-layer">Scss</a>
+                <a href="https://reactjs.org" class="skills skills-first-layer" target="_blank" rel="noopener noreferrer">React.js</a>
+                <a href="https://www.gatsbyjs.com" class="skills skills-first-layer" target="_blank" rel="noopener noreferrer">Gatsby.js</a>
+                <a href="#" class="skills skills-first-layer" target="_blank" rel="noopener noreferrer">Js</a>
+                <a href="#" class="skills skills-first-layer" target="_blank" rel="noopener noreferrer">Scss</a>
             </div>
             <div class="second-layer layer-container">
-                <a href="" class="skills skills-second-layer">Html</a>
-                <a href="" class="skills skills-second-layer">Java</a>
-                <a href="" class="skills skills-second-layer">Figma</a>
+                <a href="#" class="skills skills-second-layer" target="_blank" rel="noopener noreferrer">Html</a>
+                <a href="https://www.java.com/de/" class="skills skills-second-layer" target="_blank" rel="noopener noreferrer">Java</a>
+                <a href="https://www.figma.com" class="skills skills-second-layer" target="_blank" rel="noopener noreferrer">Figma</a>
             </div>
             <div class="third-layer layer-container">
-                <a href="" class="skills skills-third-layer">Wordpress</a>
-                <a href="" class="skills skills-third-layer">Webflow</a>
+                <a href="https://wordpress.com/de/" class="skills skills-third-layer" target="_blank" rel="noopener noreferrer">Wordpress</a>
+                <a href="https://webflow.com" class="skills skills-third-layer" target="_blank" rel="noopener noreferrer">Webflow</a>
             </div>
         </div>
     </section>
@@ -59,23 +59,23 @@
     <section class="container bio-section" id="bio">
         <h2>#Bio</h2>
         <p>Hi, I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="">BPC</a>.</p>
-        <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster, germany I started over to help pushing the digitalisation and minimize barriers for small & large companies alike. In order to achieve that goal I studied business informatic in a university in Münster, germany for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="">Techlabs</a> & <a href="">Neue Fische</a>.
+        <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster I started over. I studied business informatic at an university for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> & <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
         </p>
-        <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="">@Github</a> a look.</p>
+        <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.</p>
     </section>
 
     <section class="container" id="socials">
         <h2>#Socials</h2>
         <div class="socials-container">
-            <a href="">
+            <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
                 <div class="logo git-logo"></div>
                 <span>github</span>
             </a>
-            <a href="">
+            <a href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
                 <div class="logo codepen-logo"></div>
                 <span>codepen</span>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/tim-petersen-6022121a3/" target="_blank" rel="noopener noreferrer">
                 <div class="logo linkedin-logo"></div>
                 <span>linkedin</span>
             </a>
