Adjust styles & Hover animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="container">
-        <h1><a href="#me">TP</a></h1>
+        <h1><a href="#me" class="main-logo">TP</a></h1>
         <nav>
             <a href="#skills">Skills</a>
             <a href="#bio">Bio</a>
@@ -84,12 +84,10 @@
         <div class="contact-container">
             <h3>Contact me:</h3>
             <div class="contact-entry">
-                <i class="gg-phone"></i>
-                <a href="tel:+4915789123500">0157/89123500</a>
+                <a href="tel:+4915789123500"><i class="gg-phone"></i>0157/89123500</a>
             </div>
             <div class="contact-entry">
-                <i class="gg-mail-open"></i>
-                <a href="mailto:tim.petersen1@outlook.de">tim.petersen1@outlook.de</a>
+                <a href="mailto:tim.petersen1@outlook.de"><i class="gg-mail-open"></i>tim.petersen1@outlook.de</a>
             </div>
         </div>
     </section>
