Add BPC-link & Change color

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <section class="container bio-section" id="bio">
         <h2>#Bio</h2>
-        <p>Hi, I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="">BPC</a>.</p>
+        <p> am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
         <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster I started over. I studied business informatic at an university for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> & <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
         </p>
         <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.</p>
@@ -114,15 +114,16 @@
         document.querySelectorAll('.link').forEach(link => {
             link.insertAdjacentHTML('afterbegin', 
                 `<div>
-                <svg preserveAspectRatio="none" height="49" viewBox="0 0 100 80" fill="none" >
-                    <rect width="100" height="70" fill="url(#paint0_linear)"/>
-                    <defs>
-                    <linearGradient id="paint0_linear" x1="1.49012e-06" y1="36" x2="92.0421" y2="-14.5032" gradientUnits="userSpaceOnUse">
-                        <stop stop-color="#FECC55"/>
-                        <stop offset="1" stop-color="#FFE5A8"/>
-                    </linearGradient>
-                    </defs>
-                </svg></div>`)
+                    <svg preserveAspectRatio="none" height="49" viewBox="0 0 100 80" fill="none" >
+                        <rect width="100" height="70" fill="url(#paint0_linear)"/>
+                        <defs>
+                            <linearGradient id="paint0_linear" x1="1.49012e-06" y1="36" x2="92.0421" y2="-14.5032" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#FECC55"/>
+                                <stop offset="1" stop-color="#FFE5A8"/>
+                            </linearGradient>
+                        </defs>
+                    </svg>
+                </div>`)
         });
     </script>
 </body>
