Adjust anchor tags to fixed header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </nav>
     </header>
 
-    <section class="container me-section" id="me">
+    <section class="container me-section">
+        <a class="anchor" id="me"></a>
         <picture >
             <source media="(max-width:599px)" srcset="assets/images/profile-mobile.jpg">
             <source media="(min-width:600px)" srcset="assets/images/profile-desktop.jpg">
@@ -35,7 +36,8 @@
         </div>
     </section>
 
-    <section class="container" id="skills">
+    <section class="container">
+        <a class="anchor" id="skills"></a>
         <h2>#Skills</h2>
         <div class="skills-container">
             <div class="first-layer layer-container">
@@ -74,15 +76,17 @@
         </div>
     </section>
 
-    <section class="container bio-section" id="bio">
+    <section class="container bio-section">
+        <a class="anchor" id="bio"></a>
         <h2>#Bio</h2>
-        <p> am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
+        <p>I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
         <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster I started over. I studied business informatic at an university for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> & <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
         </p>
         <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.</p>
     </section>
 
-    <section class="container" id="socials">
+    <section class="container">
+        <a class="anchor" id="socials"></a>
         <h2>#Socials</h2>
         <div class="socials-container">
             <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
@@ -127,4 +131,5 @@
         });
     </script>
 </body>
+
 </html>
