Change profile; Add animations; Basic responsiveness

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <section class="container me-section">
         <a class="anchor" id="me"></a>
         <picture >
-            <source media="(max-width:599px)" srcset="assets/images/profile-mobile.jpg">
-            <source media="(min-width:600px)" srcset="assets/images/profile-desktop.jpg">
-            <img class="image-fluid" src="assets/images/profile-desktop.jpg"alt="" width="1200" height="1798">
+            <source media="(max-width:599px)" srcset="assets/images/memoji.jpg">
+            <source media="(min-width:600px)" srcset="assets/images/memoji.jpg">
+            <img class="image-fluid" src="assets/images/memoji.jpg"alt="" width="1200" height="1798">
         </picture>
         <div>
             <h2>#Me</h2>
-            <p>👋🏽 Hi, I am Tim</p>
-            <p>💻 Web Developer</p>
-            <p>⚓️ Hamburg</p>
+            <p><span class="icon wave">👋🏽</span>Hi, I am Tim</p>
+            <p><span class="icon">💻</span>Web Developer</p>
+            <p><span class="icon">⚓️</span>Hamburg</p>
         </div>
     </section>
 
@@ -89,18 +89,24 @@
         <a class="anchor" id="socials"></a>
         <h2>#Socials</h2>
         <div class="socials-container">
-            <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
-                <div class="logo git-logo"></div>
-                <span>github</span>
-            </a>
-            <a href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
-                <div class="logo codepen-logo"></div>
-                <span>codepen</span>
-            </a>
-            <a href="https://www.linkedin.com/in/tim-petersen-6022121a3/" target="_blank" rel="noopener noreferrer">
-                <div class="logo linkedin-logo"></div>
-                <span>linkedin</span>
-            </a>
+            <div>
+                <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
+                    <div class="logo git-logo"></div>
+                    <span>github</span>
+                </a>
+            </div>
+            <div>
+                <a class="logo-container" href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
+                    <div class="logo codepen-logo"></div>
+                    <span>codepen</span>
+                </a>
+            </div>
+            <div>
+                <a class="logo-container" href="https://www.linkedin.com/in/tim-petersen-6022121a3/" target="_blank" rel="noopener noreferrer">
+                    <div class="logo linkedin-logo"></div>
+                    <span>linkedin</span>
+                </a>
+            </div>
         </div>
     
         <div class="contact-container">
