Add custom underlines

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="image-fluid" src="assets/images/memoji.jpg"alt="" width="1200" height="1798">
         </picture>
         <div>
-            <h2>#Me</h2>
+            <div class="h2-wrapper"><h2>#Me</h2></div>
             <p><span class="icon wave">👋🏽</span>Hi, I am Tim</p>
             <p><span class="icon">💻</span>Web Developer</p>
             <p><span class="icon">⚓️</span>Hamburg</p>
@@ -38,7 +38,7 @@
 
     <section class="container">
         <a class="anchor" id="skills"></a>
-        <h2>#Skills</h2>
+        <div class="h2-wrapper"><h2>#Skills</h2></div>
         <div class="skills-container">
             <div class="first-layer layer-container">
                 <div class="skills skills-first-layer">
@@ -78,7 +78,7 @@
 
     <section class="container bio-section">
         <a class="anchor" id="bio"></a>
-        <h2>#Bio</h2>
+        <div class="h2-wrapper"><h2>#Bio</h2></div>
         <p>I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
         <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster I started over. I studied business informatic at an university for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> & <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
         </p>
@@ -87,7 +87,7 @@
 
     <section class="container">
         <a class="anchor" id="socials"></a>
-        <h2>#Socials</h2>
+        <div class="h2-wrapper"><h2>#Socials</h2></div>
         <div class="socials-container">
             <div>
                 <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
