--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </nav>
     </header>
 
+    <a class="anchor" id="me"></a>
     <section class="container me-section">
-        <a class="anchor" id="me"></a>
         <picture >
             <source media="(max-width:599px)" srcset="assets/images/memoji.jpg">
             <source media="(min-width:600px)" srcset="assets/images/memoji.jpg">
-            <img class="image-fluid" src="assets/images/memoji.jpg"alt="" width="1200" height="1798">
+            <img src="assets/images/memoji.jpg"alt="" width="400" height="400">
         </picture>
         <div>
             <div class="h2-wrapper"><h2>#Me</h2></div>
