Add rotate animation; Add cross-browser comp (h2-underline)

--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
         <div class="socials-container">
             <div>
                 <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
-                    <div class="logo git-logo"></div>
+                    <div class="logo rotate git-logo"></div>
                     <span>github</span>
                 </a>
             </div>
             <div>
                 <a class="logo-container" href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
-                    <div class="logo codepen-logo"></div>
+                    <div class="logo rotate codepen-logo"></div>
                     <span>codepen</span>
                 </a>
             </div>
             <div>
                 <a class="logo-container" href="https://www.linkedin.com/in/tim-petersen-6022121a3/" target="_blank" rel="noopener noreferrer">
-                    <div class="logo linkedin-logo"></div>
+                    <div class="logo rotate linkedin-logo"></div>
                     <span>linkedin</span>
                 </a>
             </div>
