--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="container me-section">
         <picture >
             <source media="(max-width:599px)" srcset="assets/images/memoji.jpg">
-            <source media="(min-width:600px)" srcset="assets/images/memoji.jpg">
+            <source media="(min-width:600px)" srcset="assets/images/memoji.jpg"> <!-- New img coming soon -->
             <img src="assets/images/memoji.jpg"alt="" width="400" height="400">
         </picture>
         <div>
