Add links; Adjust class names

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <a class="anchor" id="me"></a>
-    <section class="container me-section">
+    <section class="container profile-section">
         <picture >
             <source media="(max-width:599px)" srcset="assets/images/memoji.jpg">
             <source media="(min-width:600px)" srcset="assets/images/memoji.jpg"> <!-- New img coming soon -->
@@ -42,10 +42,10 @@
         <div class="skills-container">
             <div class="first-layer layer-container">
                 <div class="skills skills-first-layer">
-                    <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React.js</a>
+                    <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
                 </div>
                 <div class="skills skills-first-layer">
-                    <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby.js</a>
+                    <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby</a>
                 </div>
                 <div class="skills skills-first-layer">
                     <a href="#" class="link" target="_blank" rel="noopener noreferrer">Javasript</a>
@@ -79,7 +79,7 @@
     <section class="container bio-section">
         <a class="anchor" id="bio"></a>
         <div class="h2-wrapper"><h2>#Bio</h2></div>
-        <p>I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="">Edyoucated</a> & <a href="">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
+        <p>I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="https://edyoucated.org/de/" target="_blank" rel="noopener noreferrer">Edyoucated</a> & <a href="https://www.vertigo-studios.de" target="_blank" rel="noopener noreferrer">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
         <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster I started over. I studied business informatic at an university for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> & <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
         </p>
         <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.</p>
