Add comment for & css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="h2-wrapper"><h2>#Skills</h2></div>
         <div class="skills-container">
             <div class="first-layer layer-container">
-                <div class="skills skills-first-layer">
+                <div class="skills skills-first-layer"> <!--Necessary for animation to fill only textblock-->
                     <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
                 </div>
                 <div class="skills skills-first-layer">
